# HexTTs

./: .gitignore  CHANGELOG.md  PROJECT_DESCRIPTION.md  README.md  REFACTOR_PLAN.md  audit_dataset.py  evaluate_tts_output.py  how run all.md  index.html  inference_vits.py  nextplan.md  precompute_features.py  prepare_data.py  pyproject.toml  readme.long.md  requirements.txt  test_setup.py  train_vits.py  tts_app.py  validate_dataset.py  vits_config.continue_auto.yaml  vits_config.yaml  vits_data_cached.py  vits_model.py  vocoder.py
configs/: base.yaml  continue3.yaml  continue_auto.yaml  debug.yaml  sanity.yaml
deprecated/: README.md  phoneme_duration_patch_record_2026-04-09.md  prepare_data.py  vits_config.continue3.yaml  vits_config.continue_auto.yaml  vits_config.sanity.yaml  vits_data_cached.py
diagram/: hextts_graphs.md
doc/: TTS_Goal_Document.docx  TTS_Phase_2_Setup_Dataset_Preparation.docx  TTS_Phase_3_Training_the_VITS_Model.docx
docs/: HexTTs_AI_Project_Document.docx  architecture.md  data-pipeline.md  index.md  inference-evaluation.md  inference.md  model-training.md  operations-troubleshooting.md  project-rationale.md  system-flow.md  timeline-data.js  training.md  troubleshooting.md
hextts/: __init__.py
notes/: PATCH_NOTE.md  PATCH_NOTE_v0.4.1.md  PATCH_NOTE_v0.4.2.md  PATCH_NOTE_v0.4.3.md  PATCH_NOTE_v0.4.6.md  PHASE2_SETUP_GUIDE.md  PHASE3_QUICKSTART.md  myConfig.md
reports/: continuation_test_report_2e.txt  continuation_test_report_debug.txt  continuation_test_report_prosody.txt  evaluation_04.04.2026.md  evaluation_09.04.2026.md  (+2 more)
(+94 files in other folders)
