[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hextts"
version = "0.5.0"
description = "HexTTs text-to-speech research project"
readme = "README.md"
requires-python = ">=3.9"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["hextts*", "hifigan*"]
exclude = ["deprecated*", "diagram*", "configs*", "tts_output*"]